# Codeac-AI-Code-Reviewer

./: .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .flake8  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: github.py  repos.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  finding.py  organization.py  pull_request.py  repository.py  review_session.py  user.py
backend/app/services/ai/: agents.py  orchestrator.py  providers.py
backend/app/services/github/: __init__.py  client.py  pull_requests.py
backend/app/worker/: celery_app.py  tasks.py
frontend/: Dockerfile  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/repositories/: page.tsx
frontend/app/reviews/: page.tsx
frontend/app/security/: page.tsx
frontend/components/: DashboardStats.tsx  Sidebar.tsx
infra/terraform/: main.tf
