[tool.poetry]
name = "codeac-backend"
version = "0.1.0"
description = "Autonomous Code Review System Backend"
authors = ["Codeac Team <team@codeac.example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.4"
celery = "^5.4.0"
pydantic = {extras = ["email"], version = "^2.7.2"}
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
langchain = "^0.2.1"
langchain-openai = "^0.1.7"
langgraph = "^0.0.60"
instructor = "^1.3.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
